Fixes: NB#212951 - Short event banner visuals do not match the layout guide Fixes: NB#211365 - Notifications content is not aligned to the notification box

--- a/base/meegotouch/libmeegotouchviews/style/mbannerstyle.css
+++ b/base/meegotouch/libmeegotouchviews/style/mbannerstyle.css
@@ -28,12 +28,7 @@ MBannerStyle #ShortEventBanner {
     minimum-size: 100% 3.6mm;
     maximum-size: 100% 3.6mm;
     preferred-size: 100% 3.6mm;
-    background-image: "meegotouch-notification-event-background" 10px 10px 10px 10px;
-    margin-bottom:2.0mm;
-}
-
-MBannerStyle #ShortEventBanner:pressed {
-    background-image: "meegotouch-notification-event-background-pressed" 10px 10px 10px 10px;
+    background-image: "meegotouch-shorteventbanner-background" 10px 10px 10px 10px;
 }
 
 #ShortEventBannerTitle {
@@ -43,15 +38,14 @@ MBannerStyle #ShortEventBanner:pressed {
     margin-left: $MARGIN_LARGE;
 }
 
-#ShortEventBannerSubtitle{
+#ShortEventBannerSubtitle {
     font: $FONT_XSMALL_REGULAR;
     color: $COLOR_INVERTED_FOREGROUND;
 }
 
-#ShortEventBannerIcon{
+#ShortEventBannerIcon {
      margin-left:0.1mm;
 }
-
 
 /* Private banner at event screen */
 
@@ -59,7 +53,11 @@ MBannerStyle #PrivateBanner {
     icon-size: 5mm 5mm;
     margin-right: 0.8mm;
     margin-left: 0.8mm;
-    background-image: "meegotouch-notification-lockscreen-background" 10px 10px 10px 10px;
+    background-image: "meegotouch-fulleventbanner-background" 10px 10px 10px 10px;
+}
+
+MBannerStyle #PrivateBanner:pressed {
+    background-image: "meegotouch-fulleventbanner-background-pressed" 10px 10px 10px 10px;
 }
 
 MBannerStyle #PrivateBanner.Landscape {
@@ -110,7 +108,11 @@ MBannerStyle #FullEventBanner {
     icon-size: 5mm 5mm;
     margin-right: 0.8mm;
     margin-left: 0.8mm;
-    background-image: "meegotouch-notification-lockscreen-background" 10px 10px 10px 10px;
+    background-image: "meegotouch-fulleventbanner-background" 10px 10px 10px 10px;
+}
+
+MBannerStyle #FullEventBanner:pressed {
+    background-image: "meegotouch-fulleventbanner-background-pressed" 10px 10px 10px 10px;
 }
 
 MBannerStyle #FullEventBanner.Landscape {
